# connect_engine

./: Cargo.toml  LICENSE
.cargo/: config.toml
assets/asteroid_media/materials/: asteroid_material_0.mat
assets/models/asteroid_media/materials/: asteroid_material_0.mat
assets/models/planet_media/materials/: planet_Scene_-_Root.mat
assets/planet_media/materials/: planet_Scene_-_Root.mat
crates/engine/: Cargo.toml
crates/engine/crates/asset_management/connect_asset_database/: Cargo.toml
crates/engine/crates/asset_management/connect_asset_database/src/: lib.rs
crates/engine/crates/asset_management/connect_importer/: Cargo.toml
crates/engine/crates/asset_management/connect_importer/src/: lib.rs
crates/engine/crates/asset_management/connect_loader/: Cargo.toml
crates/engine/crates/asset_management/connect_loader/src/: events.rs  lib.rs
crates/engine/crates/asset_management/connect_shared/: Cargo.toml
crates/engine/crates/asset_management/connect_shared/src/: lib.rs  model_loader.rs
crates/engine/crates/asset_management/importer/src/: lib.rs
crates/engine/crates/asset_management/loader/: Cargo.toml
crates/engine/crates/asset_management/loader/src/: events.rs  lib.rs
crates/engine/crates/asset_management/shared/: Cargo.toml
crates/engine/crates/asset_management/shared/src/: lib.rs
crates/engine/crates/connect_information/: Cargo.toml
crates/engine/crates/connect_math/: Cargo.toml
crates/engine/crates/connect_renderer/: Cargo.toml
crates/engine/crates/connect_renderer/src/: lib.rs
crates/engine/crates/connect_renderer/src/descriptors/: descriptor_kinds.rs  descriptor_set_builder.rs  descriptor_set_handle.rs
crates/engine/crates/connect_renderer/src/helpers/: mod.rs
crates/engine/crates/connect_renderer/src/pools/: buffers_pool.rs  materials_pool.rs  mesh_buffers_pool.rs  mod.rs  samplers_pool.rs  textures_pool.rs
crates/engine/crates/connect_renderer/src/resources/: device_properties_resource.rs  frame_context_resource.rs  mod.rs  render_context_resource.rs  render_resources.rs  vulkan_context_resource.rs
crates/engine/crates/importer/src/: lib.rs
crates/engine/crates/physics/: Cargo.toml
crates/engine/crates/physics/src/: lib.rs
crates/engine/crates/renderer/: Cargo.toml
crates/engine/crates/renderer/src/: lib.rs
crates/engine/crates/renderer/src/pools/: materials_pool.rs  mesh_buffers_pool.rs  textures_pool.rs
crates/engine/crates/renderer/src/resources/: buffers_pool.rs  mesh_buffers_pool.rs  mod.rs
crates/engine/src/: engine.rs  lib.rs
crates/engine/src/engine/: events.rs
crates/engine/src/engine/ecs/components/: camera.rs  local_transform.rs  material.rs  mesh.rs  mod.rs  time.rs
crates/engine/src/engine/ecs/components/tags/: mod.rs  model_tag.rs
crates/engine/src/engine/ecs/queries/: transform.rs
crates/engine/src/engine/ecs/resources/: audio.rs  frame_context.rs  input.rs  mod.rs  physics.rs  render_context.rs  render_resources.rs  vulkan_context_resource.rs
crates/engine/src/engine/ecs/resources/render_resources/: audio.rs  buffers_pool.rs  physics.rs
crates/engine/src/engine/ecs/system_params/: physics.rs
crates/engine/src/engine/ecs/systems/: mod.rs  relationships.rs
crates/engine/src/engine/ecs/systems/event_handlers/: mod.rs  on_load_model.rs  on_spawn_model.rs
crates/engine/src/engine/ecs/systems/general/: mod.rs  physics_tick.rs
crates/engine/src/engine/ecs/systems/render/setup/: prepare_default_samplers.rs  prepare_default_textures.rs  prepare_shaders.rs
crates/engine/src/engine/ecs/systems/render/update/: begin_rendering.rs  collect_instance_objects.rs  end_rendering.rs  prepare_frame.rs  present.rs  render_meshes.rs  update_resources.rs
crates/engine/src/engine/ecs/systems/renderer/setup/: prepare_default_samplers.rs  prepare_default_textures.rs  prepare_shaders.rs
crates/engine/src/engine/ecs/systems/renderer/update/: begin_rendering.rs  collect_instance_objects.rs  end_rendering.rs  render_meshes.rs  update_resources.rs
crates/engine/src/engine/general/renderer/descriptors/: descriptor_set_builder.rs  descriptor_set_handle.rs
crates/engine/src/engine/setup/renderer/prepare/: prepare_device_properties.rs  prepare_renderer_context.rs  prepare_renderer_resources.rs  prepre_vulkan_context.rs
crates/game_logic/: Cargo.toml
crates/game_logic/src/: lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: main.rs
shaders/modules/: structs.slang
shaders/programs/: mesh.slang
