[workspace]
resolver = "3"
members = [
    "crates/engine",
    "crates/game_logic",
    "crates/runner",
    "crates/engine/crates/connect_math",
    "crates/engine/crates/asset_management/connect_importer",
    "crates/engine/crates/asset_management/connect_loader",
    "crates/engine/crates/asset_management/connect_asset_database",
    "crates/engine/crates/asset_management/connect_shared",
    "crates/engine/crates/connect_information",
    "crates/engine/crates/connect_renderer",
    # "crates/engine/crates/physics",
]

[workspace.dependencies]
rayon = "1.11.0"
bevy_ecs = { version = "0.18.1", default-features = false, features = [
    "std",
    "backtrace",
    "multi_threaded",
    "debug",
] }
winit = { version = "=0.31.0-beta.2", default-features = false }
rapier3d = { version = "0.32.0", features = ["simd-stable", "parallel"] }
asset-importer = { version = "0.7.0", default-features = false, features = [
    "bytemuck",
    "glam",
    "build-assimp",
] }
walkdir = "2.5"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.4"
rkyv = { version = "0.8.15", features = ["uuid-1"] }
uuid = { version = "1.21.0", features = [
    "fast-rng",
    "v4",
    "serde",
    "v5",
    "macro-diagnostics",
] }
uuid-simd = { version = "0.8", default-features = false, features = ["std"] }
meshopt = "0.6.2"
image = { version = "0.25.9", default-features = false, features = [
    "png",
    "jpeg",
    "hdr",
    "rayon",
] }
ktx2-rw = { git = "https://github.com/AllenDang/ktx2-rw" }
fast_image_resize = { version = "6.0.0", features = ["rayon", "image"] }
padding-struct = "0.2.0"
bytemuck = "1.25.0"
num_cpus = "1.17.0"
vulkanite = { git = "https://github.com/Jerrody/vulkanite", features = [
    "version_1_4",
    "loaded",
    "ext_unified_image_layouts",
    "ext_descriptor_buffer",
    "raw-window-handle",
    "ext_swapchain",
    "ext_shader_object",
    "ext_debug_utils",
    "ext_mesh_shader",
    "ext_validation_features",
] }
vma = { package = "vk-mem", git = "https://github.com/Jerrody/vulkanite-mem-rs", branch = "vulkanite" }
slotmap = { git = "https://github.com/Jerrody/slotmap" }
memmap2 = "0.9.10"
ahash = "0.8.12"
nameof = "1.3.0"

connect_engine = { path = "crates/engine" }
game_logic = { path = "crates/game_logic" }
connect_math = { path = "crates/engine/crates/connect_math" }
connect_importer = { path = "crates/engine/crates/asset_management/connect_importer" }
connect_loader = { path = "crates/engine/crates/asset_management/connect_loader" }
connect_shared = { path = "crates/engine/crates/asset_management/connect_shared" }
connect_asset_database = { path = "crates/engine/crates/asset_management/connect_asset_database" }
connect_information = { path = "crates/engine/crates/connect_information" }
connect_renderer = { path = "crates/engine/crates/connect_renderer" }
# physics = { path = "crates/engine/crates/physics" }

[profile.dev]
opt-level = 0
debug = 2

[profile.dev.package.rapier3d]
opt-level = 3
codegen-units = 1

[profile.dev.build-override]
opt-level = 2
debug = 0

[profile.dev.package.math]
opt-level = 3

[profile.dev.package.physics]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
debug = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
