[package]
name = "engine"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
rayon = { workspace = true }
bevy_ecs = { workspace = true }
winit = { workspace = true }
math = { workspace = true }
renderer = { workspace = true }
importer = { workspace = true }
asset_database = { workspace = true }
loader = { workspace = true }
information = { workspace = true }
shared = { workspace = true }
rapier3d = { workspace = true }
asset-importer = { workspace = true }
image = { workspace = true }
ktx2-rw = { workspace = true }
fast_image_resize = { workspace = true }
meshopt = { workspace = true }
padding-struct = { workspace = true }
bytemuck = { workspace = true }
num_cpus = { workspace = true }
slotmap = { workspace = true }
vulkanite = { workspace = true }
vma = { workspace = true }

raw-window-handle = "0.6.2"

ahash = { workspace = true }
nameof = { workspace = true }
dolly = "0.6.0"
kira = "0.12.0"
