[package]
name = "engine"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
connect_renderer = { workspace = true }
connect_importer = { workspace = true }
connect_asset_database = { workspace = true }
connect_loader = { workspace = true }
connect_information = { workspace = true }
connect_shared = { workspace = true }
connect_math = { workspace = true }

rayon = { workspace = true }
bevy_ecs = { workspace = true }
winit = { workspace = true }
rapier3d = { workspace = true }
asset-importer = { workspace = true }
image = { workspace = true }
ktx2-rw = { workspace = true }
fast_image_resize = { workspace = true }
meshopt = { workspace = true }
padding-struct = { workspace = true }
bytemuck = { workspace = true }
num_cpus = { workspace = true }
slotmap = { workspace = true }
vulkanite = { workspace = true }
vma = { workspace = true }
rkyv = { workspace = true }

raw-window-handle = "0.6.2"

ahash = { workspace = true }
nameof = { workspace = true }
dolly = "0.6.0"
kira = "0.12.0"
