[package]
name = "runner"
version = "0.1.0"
edition = "2024"
build = "../../build.rs"

[dependencies]
connect_engine = { workspace = true }
game_logic = { workspace = true }
winit = { workspace = true }
libloading = "0.9.0"
snmalloc-rs = { version = "0.7.4", features = ["lto"] }

[build-dependencies]
cargo_metadata = "0.23.1"
