[package]
name = "connect_renderer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
connect_math = { workspace = true }
connect_information = { workspace = true }
connect_shared = { workspace = true }

bytemuck = { workspace = true }
toml = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }
bevy_ecs = { workspace = true }
asset-importer = { workspace = true }
image = { workspace = true }
texture_compressor = { workspace = true }
texture_downsampler = { workspace = true }
meshopt = { workspace = true }
padding-struct = { workspace = true }
vulkan = { workspace = true }
vulkan_vma = { workspace = true }
ahash = { workspace = true }
slotmap = { workspace = true }
