[package]
name = "connect_asset_database"
version = "0.1.0"
edition = "2024"

[dependencies]
connect_math = { workspace = true }
connect_shared = { workspace = true }
connect_renderer = { workspace = true }

slotmap = { workspace = true }
bytemuck = { workspace = true }
toml = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }
bevy_ecs = { workspace = true }
asset-importer = { workspace = true }
image = { workspace = true }
texture_compressor = { workspace = true }
texture_downsampler = { workspace = true }
meshopt = { workspace = true }
padding-struct = { workspace = true }

uuid = { workspace = true }
uuid-simd = { workspace = true }
