# TODO: This crate is inteded to be removed in future, this crate is for migration purposes.
[package]
name = "connect_shared"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
connect_math = { workspace = true }

bytemuck = { workspace = true }
toml = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }
bevy_ecs = { workspace = true }
asset-importer = { workspace = true }
image = { workspace = true }
texture_compressor = { workspace = true }
texture_downsampler = { workspace = true }
meshopt = { workspace = true }
padding-struct = { workspace = true }
slotmap = { workspace = true }
vulkan = { workspace = true }

uuid = { workspace = true }
uuid-simd = { workspace = true }
